# Vectorframe

./: .gitignore  README.md  package-lock.json  package.json
scripts/: build_mac.sh  generate_form.py  generate_icon.sh
src/: index.html  style-about.css  style-layer-settings.css  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/js/: 01-state.js  02-brush-textures.js  03-paper-setup.js  04-serialization.js  05-history.js  06-layers.js  07-render.js  08-tool-brush.js  09-tool-select.js  10-tool-eraser.js  11-tool-fill.js  12-tool-hide-edge.js  13-tool-transform.js  14-tool-camera.js  15-tool-activation.js  16-timeline.js  17-layers-ui.js  18-export.js  19-import.js  20-project-io.js  21-preferences.js  21-project.js  22-ui-bindings.js  23-keyboard.js  24-init.js  25-audio.js  26-export-mp4.js  27-resize-panels.js  28-layer-settings.js  29-workspace.js  30-selection-sync.js  31-about.js  32-export-advanced.js  33-tools-advanced.js  34-camera.js
