[package]
name = "vectorframe"
version = "1.0.0"
edition = "2021"

[lib]
name = "vectorframe_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "vectorframe"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
